# opencv-cpp-examples

./: README.md
04_ROI/: CMakeLists.txt  main.cpp
05_AccessingPixel/: CMakeLists.txt  main.cpp
06_ReduceColor/: CMakeLists.txt  main.cpp
120_RPWvideos/: CMakeLists.txt  Canny.avi  main.cpp  videoprocessor.h
121_BGFG/: BGFGSegmentor.h  CMakeLists.txt  DOGO.avi  main.cpp  videoprocessor.h
30_ComparingColors/: CMakeLists.txt  colordetector.cpp  colordetector.h  main.cpp
32_representingHSB/: CMakeLists.txt  main.cpp
40_histogram/: CMakeLists.txt  histogram.h  main.cpp
41_histogramColor/: CMakeLists.txt  colorhistogram.h  contentFinder.h  histogram.h  main.cpp
43_meanshift/: CMakeLists.txt  colorhistogram.h  contentFinder.h  main.cpp
44_countingPixels/: CMakeLists.txt  main.cpp
44_countingPixels2/: CMakeLists.txt  histogram.h  integral.h  main.cpp
53_segmentingWS/: CMakeLists.txt  main.cpp  watershedSegmentation.h
70_canny/: CMakeLists.txt  edgedetector.h  linefinder.h  main.cpp
71_ExtracCompon/: CMakeLists.txt  edgedetector.h  main.cpp
test3_openCV/: CMakeLists.txt  main.cpp
test4_openCV/: CMakeLists.txt  main.cpp
